--- a/src/app/common-project.scss
+++ b/src/app/common-project.scss
@@ -6,6 +6,10 @@
 	text-align: right;
 }
 
+.no-height-part {
+	padding: 0px !important;
+}
+
 .page {
   //font-family: 'Lato', sans-serif;
   //font-weight: 300;
