update again with new home

--- a/src/app/echoes/echoes.component.html
+++ b/src/app/echoes/echoes.component.html
@@ -751,7 +751,7 @@
 		<hr class="page-divider">
 		<p class="more-project-title">More Projects</p>
 		<div class="row justify-content-center width-85">
-			<div class="col-lg-3 col-sm-12 project hid-on-init" animateOnScroll animationName="animated fadeIn">
+			<div class="col-lg-3 col-8 project hid-on-init" animateOnScroll animationName="animated fadeIn">
 				<div class="thumb-image square">
 					<div class="crop-img">
 						<a href="projects/itale">
@@ -770,7 +770,7 @@
 				</p>
 			</div>
 
-			<div class="col-lg-3 col-sm-12 project hid-on-init" animateOnScroll animationName="animated fadeIn">
+			<div class="col-lg-3 col-8 project hid-on-init" animateOnScroll animationName="animated fadeIn">
 				<div class="thumb-image square">
 					<div class="crop-img">
 						<a href="projects/dunhuang">
@@ -789,7 +789,7 @@
 				</p>
 			</div>
 
-			<div class="col-lg-3 col-sm-12 project hid-on-init" animateOnScroll animationName="animated fadeIn">
+			<div class="col-lg-3 col-8 project hid-on-init" animateOnScroll animationName="animated fadeIn">
 				<div class="thumb-image square">
 					<div class="crop-img">
 						<a href="projects/involved">
@@ -813,17 +813,17 @@
 	<div class="foot">
 		<p class="copyright center-align">Designed and hand-coded by Jing You © 2020 💡</p>
 		<div class="row width-40 justify-content-center">
-			<div class="col-lg-1">
+			<div class="col-1">
 				<a href="https://www.linkedin.com/in/jing-you-b823b4132/" target="_blank" class="sm-link">
 					<fa name="linkedin" class="sm-icon"></fa>
 				</a>
 			</div>
-			<div class="col-lg-1">
+			<div class="col-1">
 				<a href="https://github.com/youjing402/" target="_blank" class="sm-link">
 					<fa name="github" class="sm-icon"></fa>
 				</a>
 			</div>
-			<div class="col-lg-1">
+			<div class="col-1">
 				<a href="mailto:youjing402@gmail.com" class="sm-link">
 					<fa name="envelope" class="sm-icon"></fa>
 				</a>
