--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -82,25 +82,27 @@
 			<div class="wave2"> </div>
 		</div>
 	-->
-	<div #worksection class="section-title margin-15" id="workSection" animateOnScroll animationName="animated fadeIn">Intern Projects</div>
-	<p class="section-intro margin-50" animateOnScroll animationName="animated fadeIn">I had UX / product design experience in both small startup and large corporation. Check out my favorite works here:</p> 
+	<div #worksection class="section-title margin-50" id="workSection" animateOnScroll animationName="animated fadeIn">Project Highlights</div>
+	<!--
+	<p class="section-intro margin-50" animateOnScroll animationName="animated fadeIn">I had UX / product design experience in both small startup and large corporation. Check out my favorite works here:</p> -->
 	<div class="row justify-content-around width-70">
+
 		<div class="col-lg-6 col-sm-12 project hid-on-init" animateOnScroll animationName="animated fadeIn">
 			<div class="thumb-image square" >
 				<div class="crop-img">
-					<a href="projects/itale">
-						<img src="assets/img/projectthumb-05.png">
+					<a href="projects/jb">
+						<img src="assets/img/projectthumb-06.png">
 					</a>
 				</div>
 			</div>
 			<p class="project-categories">
-				/Education Design /Startup /Product Design 
+				/SaaS /Web App /UX /UI
 			</p>
 			<p class="project-title">
-				iTale - Internship @iTale
+				Journey Builder Redesign - Sponsored by Salesforce
 			</p>
 			<p class="project-description">
-				A playground for children to tell creative stories
+				Redesigning the testing feature to boost marketers' confidence
 			</p>
 
 		</div>
@@ -114,7 +116,7 @@
 				</div>
 			</div>
 			<p class="project-categories">
-				/Charity Design /Commercialization /Culture /UX Design 
+				/Creative Charity /Mobile /UX Design 
 			</p>
 			<p class="project-title">
 				Light Up Dunhuang - Internship @Tencent
@@ -124,10 +126,53 @@
 			</p>
 
 		</div>
+
+		<div class="col-lg-6 col-sm-12 project hid-on-init" animateOnScroll animationName="animated fadeIn">
+			<div class="thumb-image square" >
+				<div class="crop-img">
+					<a href="projects/itale">
+						<img src="assets/img/projectthumb-05.png">
+					</a>
+				</div>
+			</div>
+			<p class="project-categories">
+				/Education /Startup /Product Design 
+			</p>
+			<p class="project-title">
+				iTale - Internship @iTale
+			</p>
+			<p class="project-description">
+				A playground for children to tell creative stories
+			</p>
+
+		</div>
+
+		<div class="col-lg-6 col-sm-12 project hid-on-init" animateOnScroll animationName="animated fadeIn">
+			<div class="thumb-image square" >
+				<div class="crop-img">
+					<a href="projects/itale">
+						<img src="assets/img/projectthumb-03.png">
+					</a>
+				</div>
+			</div>
+			<p class="project-categories">
+				/7-day Design Challenge /UX /Research /Mobile
+			</p>
+			<p class="project-title">
+				Involved - Google Design Exercise
+			</p>
+			<p class="project-description">
+				Helping students find the right organization to engage with
+			</p>
+
+		</div>
+		
 	</div>
 
 	<div #projectsection class="section-title margin-50" id="projectSection" animateOnScroll animationName="animated fadeIn">Other Projects</div>
 	<div class="row justify-content-center width-85">
+		
+		<!--
 		<div class="col-lg-3 col-sm-12 project hid-on-init" animateOnScroll animationName="animated fadeIn">
 			<div class="thumb-image square">
 				<div class="crop-img">
@@ -146,8 +191,9 @@
 				Socializing the experience for new students to find the right organizations to engage with
 			</p>
 		</div>
+		-->
 
-		<div class="col-lg-3 col-sm-12 project hid-on-init" animateOnScroll animationName="animated fadeIn">
+		<div class="col-lg-4 col-sm-12 project hid-on-init" animateOnScroll animationName="animated fadeIn">
 			<div class="thumb-image square" >
 				<div class="crop-img">
 					<a href="projects/echoes">
@@ -166,7 +212,7 @@
 			</p>
 
 		</div>
-		<div class="col-lg-3 col-sm-12 project hid-on-init" animateOnScroll animationName="animated fadeIn">
+		<div class="col-lg-4 col-sm-12 project hid-on-init" animateOnScroll animationName="animated fadeIn">
 			<div class="thumb-image square">
 				<div class="crop-img">
 					<a href="projects/stretch">
@@ -185,7 +231,7 @@
 			</p>
 		</div>
 
-		<div class="col-lg-3 col-sm-12 project hid-on-init" animateOnScroll animationName="animated fadeIn">
+		<div class="col-lg-4 col-sm-12 project hid-on-init" animateOnScroll animationName="animated fadeIn">
 			<div class="thumb-image square">
 				<div class="crop-img">
 					<a href="projects/poco">
