--- a/src/app/dunhuang/dunhuang.component.html
+++ b/src/app/dunhuang/dunhuang.component.html
@@ -695,7 +695,26 @@
 		<hr class="page-divider">
 		<p class="more-project-title">More Projects</p>
 		<div class="row justify-content-center width-85">
-			<div class="col-lg-3 col-sm-12 project hid-on-init" animateOnScroll animationName="animated fadeIn">
+			<div class="col-lg-3 col-8 project hid-on-init" animateOnScroll animationName="animated fadeIn">
+				<div class="thumb-image square">
+					<div class="crop-img">
+						<a href="projects/jb">
+							<img src="assets/img/projectthumb-06.png">
+						</a>
+					</div>
+				</div>
+				<p class="project-categories">
+					/SaaS /Web App /UX /UI
+				</p>
+				<p class="project-title">
+					Journey Builder Redesign - Sponsored by Salesforce
+				</p>
+				<p class="project-description">
+					Redesigning the testing feature to boost marketers' confidence
+				</p>
+			</div>
+
+			<div class="col-lg-3 col-8 project hid-on-init" animateOnScroll animationName="animated fadeIn">
 				<div class="thumb-image square">
 					<div class="crop-img">
 						<a href="projects/itale">
@@ -714,7 +733,7 @@
 				</p>
 			</div>
 			
-			<div class="col-lg-3 col-sm-12 project hid-on-init" animateOnScroll animationName="animated fadeIn">
+			<div class="col-lg-3 col-8 project hid-on-init" animateOnScroll animationName="animated fadeIn">
 				<div class="thumb-image square">
 					<div class="crop-img">
 						<a href="projects/involved">
@@ -733,41 +752,23 @@
 				</p>
 			</div>
 
-			<div class="col-lg-3 col-sm-12 project hid-on-init" animateOnScroll animationName="animated fadeIn">
-				<div class="thumb-image square">
-					<div class="crop-img">
-						<a href="projects/stretch">
-							<img src="assets/img/projectthumb-02.png">
-						</a>
-					</div>
-				</div>
-				<p class="project-categories">
-					/UX Design /UX Research /Mobile App Design
-				</p>
-				<p class="project-title">
-					Stretch - the Invisible Food Insecurity
-				</p>
-				<p class="project-description">
-					A mobile meal planner that optimizes use of time, budget, and resources
-				</p>
-			</div>
 		</div>
 	</div>
 
 	<div class="foot">
 		<p class="copyright center-align">Designed and hand-coded by Jing You © 2020 💡</p>
 		<div class="row width-40 justify-content-center">
-			<div class="col-lg-1">
+			<div class="col-1">
 				<a href="https://www.linkedin.com/in/jing-you-b823b4132/" target="_blank" class="sm-link">
 					<fa name="linkedin" class="sm-icon"></fa>
 				</a>
 			</div>
-			<div class="col-lg-1">
+			<div class="col-1">
 				<a href="https://github.com/youjing402/" target="_blank" class="sm-link">
 					<fa name="github" class="sm-icon"></fa>
 				</a>
 			</div>
-			<div class="col-lg-1">
+			<div class="col-1">
 				<a href="mailto:youjing402@gmail.com" class="sm-link">
 					<fa name="envelope" class="sm-icon"></fa>
 				</a>
