--- a/src/app/itale/itale.component.html
+++ b/src/app/itale/itale.component.html
@@ -642,7 +642,26 @@
 		<hr class="page-divider">
 		<p class="more-project-title">More Projects</p>
 		<div class="row justify-content-center width-85">
-			<div class="col-lg-3 col-sm-12 project hid-on-init" animateOnScroll animationName="animated fadeIn">
+			<div class="col-lg-3 col-8 project hid-on-init" animateOnScroll animationName="animated fadeIn">
+				<div class="thumb-image square" >
+					<div class="crop-img">
+						<a href="projects/jb">
+							<img src="assets/img/projectthumb-06.png">
+						</a>
+					</div>
+				</div>
+				<p class="project-categories">
+					/SaaS /Web App /UX /UI
+				</p>
+				<p class="project-title">
+					Journey Builder Redesign - Sponsored by Salesforce
+				</p>
+				<p class="project-description">
+					Redesigning the testing feature to boost marketers' confidence
+				</p>
+			</div>
+
+			<div class="col-lg-3 col-8 project hid-on-init" animateOnScroll animationName="animated fadeIn">
 				<div class="thumb-image square">
 					<div class="crop-img">
 						<a href="projects/dunhuang">
@@ -651,7 +670,7 @@
 					</div>
 				</div>
 				<p class="project-categories">
-					/Charity Design /Commercialization /Culture /UX Design 
+					/Creative Charity /Mobile /UX Design 
 				</p>
 				<p class="project-title">
 					Light Up Dunhuang - Internship @Tencent
@@ -661,7 +680,7 @@
 				</p>
 			</div>
 
-			<div class="col-lg-3 col-sm-12 project hid-on-init" animateOnScroll animationName="animated fadeIn">
+			<div class="col-lg-3 col-8 project hid-on-init" animateOnScroll animationName="animated fadeIn">
 				<div class="thumb-image square">
 					<div class="crop-img">
 						<a href="projects/involved">
@@ -670,51 +689,33 @@
 					</div>
 				</div>
 				<p class="project-categories">
-					/7-day Design Challenge /UX Design /UX Research /Mobile App Design
+					/7-day Design Challenge /UX /Research /Mobile
 				</p>
 				<p class="project-title">
-					Involved - Google Design Exercise 2019
+					Involved - Google Design Exercise
 				</p>
 				<p class="project-description">
-					Socializing the experience for new students to find the right organizations to engage with
+					Helping students find the right organization to engage with
 				</p>
 			</div>
 
-			<div class="col-lg-3 col-sm-12 project hid-on-init" animateOnScroll animationName="animated fadeIn">
-				<div class="thumb-image square" >
-					<div class="crop-img">
-						<a href="projects/echoes">
-							<img src="assets/img/projectthumb-01.png">
-						</a>
-					</div>
-				</div>
-				<p class="project-categories">
-					/UX Design /UX Research /Platform Design /Design Competition
-				</p>
-				<p class="project-title">
-					Echoes - CHI Student Design Competition
-				</p>
-				<p class="project-description">
-					A Feeling-Centered music experience that connects listeners and artists
-				</p>
-			</div>
 		</div>
 	</div>
 
 	<div class="foot">
 		<p class="copyright center-align">Designed and hand-coded by Jing You © 2020 💡</p>
 		<div class="row width-40 justify-content-center">
-			<div class="col-lg-1">
+			<div class="col-1">
 				<a href="https://www.linkedin.com/in/jing-you-b823b4132/" target="_blank" class="sm-link">
 					<fa name="linkedin" class="sm-icon"></fa>
 				</a>
 			</div>
-			<div class="col-lg-1">
+			<div class="col-1">
 				<a href="https://github.com/youjing402/" target="_blank" class="sm-link">
 					<fa name="github" class="sm-icon"></fa>
 				</a>
 			</div>
-			<div class="col-lg-1">
+			<div class="col-1">
 				<a href="mailto:youjing402@gmail.com" class="sm-link">
 					<fa name="envelope" class="sm-icon"></fa>
 				</a>
